# python-glmnet

./: .gitignore  .pdm-python  .sourcery.yaml  CHANGELOG.md  README.rst  build.py  debug.py  meson copy.build  meson.build  noxfile.py  pdm_build.py  pyproject.toml
_glmnet/: meson.build
src/glmnet/: __init__.py  errors.py  linear.py  logistic.py  meson.build  old_linear.py  scorer.py  util.py
src/glmnet/_glmnet/: _glmnet5-f2pywrappers.f  _glmnet5module.c  glmnet5.f  meson.build
src/glmnet/fglmnet/: NOTICE  fglmnet-f2pywrappers.f  fglmnetmodule.c  glmnet5.f  meson.build
tests/: conftest.py  test_errors.py  test_linear.py  test_linear2.py  test_logistic.py  test_pandas.py  test_util.py  util.py
