[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=42", "wheel", "scikit-build", "cmake>=3.9", "numpy>=1.21"
]

[project]
name = "python-glmnet"
version = "2.3.0"
description = "Python wrapper for glmnet"
authors = [
    {name="Civis Analytics Inc", email="opensource@replicahq.com"}
]
dependencies = [
    "numpy>=1.9.2",
    "scikit-learn>=0.18.0",
    "scipy>=0.14.1",
    "joblib>=0.14.1",
    "setuptools>=75.3.0",
]
requires-python = ">=3.9"
readme = 'README.rst'
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Topic :: Scientific/Engineering",
]

[project.urls]
homepage = "https://github.com/replicahq/python-glmnet"
repository = "https://github.com/replicahq/python-glmnet"

[tool.pdm.build]
