[project]
name = "python_glmnet"
description = "Python wrapper for glmnet"
authors = [
    {name="Civis Analytics Inc", email="opensource@replicahq.com"}
]
requires-python = ">=3.10"
readme = 'README.rst'
version = "2.5.0"
dependencies = [
    "numpy==1.26.4",
    "scikit-learn>=1.4.0",
    "scipy>=1.13.1",
    "joblib>=1.3.0",
    "setuptools>=75.3.0",
]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Topic :: Scientific/Engineering",
]

[tool.pdm.dev-dependencies]
build = [
    "setuptools",
    "meson-python>=0.16.0",
    "ninja>=1.8.2"
]

[tool.pdm.options]
install = ["--no-isolation"]

[project.urls]
homepage = "https://github.com/replicahq/python-glmnet"
repository = "https://github.com/replicahq/python-glmnet"

[build-system]
build-backend = "mesonpy"
requires = [
    "meson-python>=0.16.0", "numpy>=2.1", "ninja>=1.11", "meson>=1.1"
]
[dependency-groups]
dev = [
    "ruff>=0.7.3",
    "pytest>=8.3.3",
    "nox>=2024.10.9",
    "pytest-lazy-fixtures>=1.1.1",
]
build = [
    "setuptools>=75.0.0",
    "meson-python>=0.16.0",
    "ninja>=1.8.2"
]
